[tool.poetry]
name = "dio-twitter-py"
version = "2.0.0"
description = "teste"
authors = ["Suellen <suellen.diass@yahoo.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tweepy = "^4.14.0"
pymongo = "^4.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
